melhorando respostas http e 'validando' entrada de dados/propriedades json

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/meuApp
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
+
+# proibi a tentativa de inclusão de propriedades que não existem
+spring.jackson.deserialization.fail-on-unknown-properties= true
